# MBridge

./: .gitignore  CMakeLists.txt  Notes.md  README.md  make.sh  run_qemu.sh
include/: FreeRTOSConfig.h  app_hal.h  data_types.h  logger.h  task_uart.h
include/app/: task_uart.h
include/drivers/: app_hal.h  drv_uart.h
include/services/: logger.h
include/sys/: data_types.h
src/: app_hal_sim.c  comm_uart.c  data_types.c  logger.c  main.c  rtos_tasks.c  startup.c  syscalls.c  task_uart.c
src/app/: task_sensors.c  task_uart.c
src/drivers/: app_hal_sim.c  drv_uart.c
src/services/: logger.c
src/sys/: data_utils.c  startup.c
